--- a/frontend/src/pages/Admin.css
+++ b/frontend/src/pages/Admin.css
@@ -3,8 +3,11 @@
   min-width: 100%;
    display: grid;
    grid-template-columns:auto 1fr 1fr;
-   grid-template-rows:  auto ;
+   grid-template-rows:  auto auto auto;
    grid-template-areas: "admin-searchbar admin-searchbar admin-searchbar"
    "admin-sidebar admin-info  admin-info "
-   "admin-sidebar admin-info admin-info";
+   "admin-sidebar product-container product-container"
+   "admin-sidebar product-container product-container"
+   "admin-sidebar product-container product-container"
+   "admin-sidebar product-container product-container";
 }
