--- a/frontend/src/components/Admin_Products/Admin_Products.css
+++ b/frontend/src/components/Admin_Products/Admin_Products.css
@@ -1,6 +1,5 @@
 .admin-products-container{
-  grid-area: product-container;
-  overflow-x: auto;
+ 
   display: grid;
   align-items: flex-start;
   justify-content: center;
@@ -18,4 +17,29 @@
   text-align: center;
   padding: 1rem;
   width: 50px;
+}
+
+@media (max-width:1000px){
+  .admin-products-container{
+    overflow-x: auto;
+ 
+  }
+  .admin-products-container table{
+    width: 100%;
+    min-width: 600px;
+  }
+  .admin-products-container table td{
+    text-align: center;
+    padding: 1rem;
+    width: 2px;
+  }
+}
+
+@media (max-width:600px){
+  .admin-products-container{
+    overflow-x: auto;
+ 
+  }
+
+  
 }
