--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,22 @@
+@import "tailwindcss";
+
 *{
+
+
+}
+html, body {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  height: 100%;
 }
-a{
-  color: rgb(5, 35, 202);
+body {
+  font-family: 'Inter', sans-serif;
+  background-color: #f3f4f6; /* Tailwind's gray-100 */
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Inter', sans-serif;
+}
+
+a:hover {
+  text-decoration: underline;
 }
